--- a/index.html
+++ b/index.html
@@ -5,337 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fantasy League Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-      body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        margin: 0;
-        padding: 20px;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        min-height: 100vh;
-      }
-
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        background: white;
-        border-radius: 15px;
-        padding: 2rem;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        position: relative;
-      }
-
-      h1 {
-        text-align: center;
-        color: #2c3e50;
-        margin-bottom: 2rem;
-        font-size: 2.5rem;
-      }
-
-      .status {
-        text-align: center;
-        margin-bottom: 2rem;
-        padding: 1rem;
-        background: #f8f9fa;
-        border-radius: 8px;
-        color: #6c757d;
-        font-weight: 500;
-      }
-
-      .controls {
-        display: flex;
-        gap: 1rem;
-        margin-bottom: 2rem;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-      }
-
-      select,
-      button {
-        padding: 0.75rem 1.5rem;
-        border: 2px solid #007bff;
-        border-radius: 8px;
-        font-size: 1rem;
-        cursor: pointer;
-        transition: all 0.3s ease;
-      }
-
-      select {
-        background: white;
-        color: #007bff;
-      }
-
-      select:focus {
-        outline: none;
-        border-color: #0056b3;
-        box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.1);
-      }
-
-      button {
-        background: #007bff;
-        color: white;
-        font-weight: 600;
-      }
-
-      button:hover {
-        background: #0056b3;
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
-      }
-
-      .chart-container {
-        margin-bottom: 3rem;
-        text-align: center;
-      }
-
-      #teamPointsChart {
-        max-width: 100%;
-        height: 400px;
-        margin: 0 auto;
-      }
-
-      .standings-section {
-        margin-top: 3rem;
-        padding-top: 2rem;
-        border-top: 3px solid #e9ecef;
-      }
-
-      /* Make table horizontally scrollable on small screens */
-      .table-wrapper {
-        width: 100%;
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-      }
-
-      .standings-section h2 {
-        text-align: center;
-        color: #2c3e50;
-        margin-bottom: 1.5rem;
-        font-size: 2rem;
-      }
-
-      .standings-controls {
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        background: white;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        margin: 0 auto;
-      }
-
-      th,
-      td {
-        padding: 1rem;
-        text-align: left;
-        border-bottom: 1px solid #e9ecef;
-      }
-
-      th {
-        background: #007bff;
-        color: white;
-        font-weight: 600;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-      }
-
-      tr:hover {
-        background: #f8f9fa;
-      }
-
-      /* Rank styling */
-      .rank-1 {
-        background: linear-gradient(135deg, #ffd700, #ffed4e) !important;
-        color: #2c3e50;
-        font-weight: bold;
-      }
-
-      .rank-2 {
-        background: linear-gradient(135deg, #c0c0c0, #e8e8e8) !important;
-        color: #2c3e50;
-        font-weight: bold;
-      }
-
-      .rank-3 {
-        background: linear-gradient(135deg, #cd7f32, #daa520) !important;
-        color: white;
-        font-weight: bold;
-      }
-
-      /* Streak styling */
-      .streak-positive {
-        color: #28a745;
-        font-weight: bold;
-      }
-
-      .streak-negative {
-        color: #dc3545;
-        font-weight: bold;
-      }
-
-      /* Team avatar styling */
-      .team-info {
-        display: flex;
-        align-items: center;
-        gap: 0.75rem;
-      }
-
-      .team-avatar {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        object-fit: cover;
-        border: 2px solid #e9ecef;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      }
-
-      .team-avatar-placeholder {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background: linear-gradient(135deg, #6c757d, #495057);
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.2rem;
-        border: 2px solid #e9ecef;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      }
-
-      .team-name {
-        font-weight: 600;
-        color: #2c3e50;
-      }
-
-      /* Settings Button Styles */
-      .settings-button {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-        background: #6c757d;
-        color: white;
-        border: none;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        cursor: pointer;
-        font-size: 1.5rem;
-        transition: all 0.3s ease;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-      }
-      .settings-button:hover {
-        background: #5a6268;
-        transform: scale(1.1);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      }
-
-      /* Password Modal Styles */
-      .password-modal {
-        display: none;
-        position: fixed;
-        z-index: 1000;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-      }
-      .password-content {
-        background-color: white;
-        margin: 15% auto;
-        padding: 2rem;
-        border-radius: 10px;
-        width: 300px;
-        text-align: center;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-      }
-      .password-input {
-        width: 100%;
-        padding: 0.75rem;
-        margin: 1rem 0;
-        border: 2px solid #ddd;
-        border-radius: 5px;
-        font-size: 1rem;
-        text-align: center;
-        letter-spacing: 0.5rem;
-      }
-      .password-input:focus {
-        outline: none;
-        border-color: #007bff;
-      }
-      .password-buttons {
-        display: flex;
-        gap: 1rem;
-        justify-content: center;
-        margin-top: 1rem;
-      }
-      .btn {
-        padding: 0.5rem 1rem;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1rem;
-        transition: background-color 0.3s;
-      }
-      .btn-primary {
-        background: #007bff;
-        color: white;
-      }
-      .btn-primary:hover {
-        background: #0056b3;
-      }
-      .btn-secondary {
-        background: #6c757d;
-        color: white;
-      }
-      .btn-secondary:hover {
-        background: #5a6268;
-      }
-
-      /* Responsive design */
-      @media (max-width: 768px) {
-        .container {
-          padding: 1rem;
-          margin: 10px;
-        }
-
-        h1 {
-          font-size: 2rem;
-        }
-
-        .controls {
-          flex-direction: column;
-          align-items: stretch;
-        }
-
-        select,
-        button {
-          width: 100%;
-        }
-
-        table {
-          font-size: 0.9rem;
-        }
-
-        th,
-        td {
-          padding: 0.75rem 0.5rem;
-        }
-
-        .team-avatar,
-        .team-avatar-placeholder {
-          width: 32px;
-          height: 32px;
-          font-size: 1rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
@@ -347,6 +17,18 @@
       >
         ⚙️
       </button>
+
+      <!-- Theme Switcher -->
+      <div class="theme-switcher">
+        <label for="themeSelect">🎨 Theme:</label>
+        <select id="themeSelect" onchange="changeTheme(this.value)">
+          <option value="dark-neon">Dark Mode with Neon</option>
+          <option value="sports">Sports Theme</option>
+          <option value="glass">Glass Morphism</option>
+          <option value="synthwave">Retro Synthwave</option>
+          <option value="corporate">Professional Corporate</option>
+        </select>
+      </div>
 
       <h1>🏈 Fantasy League Dashboard</h1>
 
@@ -387,10 +69,7 @@
               <tr>
                 <th>Rank</th>
                 <th>Team</th>
-                <th>W</th>
-                <th>L</th>
-                <th>T</th>
-                <th>Streak</th>
+                <th>Win Streak</th>
                 <th>Total Score</th>
               </tr>
             </thead>
