--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </select>
       </div>
 
-      <h1>🏈 Fantasy League Dashboard</h1>
+      <h1 id="dashboardTitle">Loading Dashboard...</h1>
 
       <div class="status" id="status">Status: Loading...</div>
 
@@ -69,7 +69,6 @@
               <tr>
                 <th>Rank</th>
                 <th>Team</th>
-                <th>Win Streak</th>
                 <th>Total Score</th>
               </tr>
             </thead>
