adjust standings table
Updated fantasy league dashboard with record-based standings. Teams now ranked by wins/losses with total points as tiebreaker. Added Record column to standings table. Integrated real Sleeper API scoring data (fpts) instead of mock data. SilkyPenne leads at 2-0-0 with 279.70 points. Database schema updated with wins/losses/ties fields.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               <tr>
                 <th>Rank</th>
                 <th>Team</th>
+                <th>Record</th>
                 <th>Total Score</th>
               </tr>
             </thead>
