--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fantasy League Dashboard</title>
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="icon" type="image/x-icon" href="/Img/Statsnap-logo.png" />
   </head>
@@ -80,32 +81,19 @@
         </div>
       </div>
 
-      <div class="controls">
-        <select id="weekSelect">
-          <option value="1">Week 1</option>
-          <option value="2">Week 2</option>
-          <option value="3">Week 3</option>
-          <option value="4">Week 4</option>
-          <option value="5">Week 5</option>
-          <option value="6">Week 6</option>
-          <option value="7">Week 7</option>
-          <option value="8">Week 8</option>
-          <option value="9">Week 9</option>
-          <option value="10">Week 10</option>
-          <option value="11">Week 11</option>
-          <option value="12">Week 12</option>
-          <option value="13">Week 13</option>
-          <option value="14">Week 14</option>
-          <option value="15">Week 15</option>
-          <option value="16">Week 16</option>
-          <option value="17">Week 17</option>
-          <option value="18">Week 18</option>
-        </select>
-        <button id="refreshData">Refresh Data</button>
-      </div>
+      <div class="charts-section">
+        <div class="chart-tabs">
+          <button class="chart-tab active" data-chart="weekly-progress">
+            Weekly Progress
+          </button>
+          <button class="chart-tab" data-chart="coming-soon">
+            More Charts Coming Soon
+          </button>
+        </div>
 
-      <div class="chart-container">
-        <canvas id="teamPointsChart"></canvas>
+        <div class="chart-container">
+          <canvas id="weeklyProgressChart"></canvas>
+        </div>
       </div>
     </div>
 
